<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF7043"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.23"
        android:gravity="center"
        android:orientation="vertical">

        <com.hanks.htextview.rainbow.RainbowTextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:gravity="center"
            android:shadowColor="@color/TextViewShadow"
            android:shadowDx="20"
            android:shadowDy="20"
            android:shadowRadius="10"
            android:text="@string/highscore"
            android:textSize="40sp"
            android:textStyle="bold|italic"
            app:colorSpace="150dp"
            app:colorSpeed="4dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:background="@mipmap/ic_trending_up_black_24dp"
                app:srcCompat="@mipmap/ic_trending_up_black_24dp" />

            <!--<TextView-->
            <!--android:id="@+id/txtScoreBest"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="match_parent"-->
            <!--android:gravity="center"-->
            <!--android:text="0"-->
            <!--android:textStyle="bold" />-->
            <com.romainpiel.shimmer.ShimmerTextView
                android:id="@+id/txtScoreBest"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.23"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnClassicPlay"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="20dp"
            android:layout_weight="0.5"
            android:background="@drawable/shape1"
            android:drawableLeft="@mipmap/ic_games_black_24dp"
            android:shadowColor="@color/TextViewShadow"
            android:shadowDx="20"
            android:shadowDy="20"
            android:shadowRadius="5"
            android:text="@string/ClassicPlay"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnTimeTrial"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="5dp"
            android:layout_weight="0.5"
            android:background="@drawable/shape2"
            android:drawableLeft="@mipmap/ic_timer_black_24dp"
            android:shadowColor="@color/TextViewShadow"
            android:shadowDx="20"
            android:shadowDy="20"
            android:shadowRadius="5"
            android:text="@string/TimeTrial"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.31"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnSounds"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="20dp"
            android:layout_weight="0.33"
            android:background="@drawable/shape3"
            android:drawableLeft="@mipmap/ic_volume_up_black_24dp"
            android:shadowColor="@color/TextViewShadow"
            android:shadowDx="20"
            android:shadowDy="20"
            android:shadowRadius="5"
            android:text="@string/Sounds"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnBackgroundColor"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="5dp"
            android:layout_weight="0.33"
            android:background="@drawable/shape3"
            android:drawableLeft="@mipmap/ic_palette_black_24dp"
            android:shadowColor="@color/TextViewShadow"
            android:shadowDx="20"
            android:shadowDy="20"
            android:shadowRadius="5"
            android:text="@string/BackgroundColor"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnLanguage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="5dp"
            android:layout_weight="0.33"
            android:background="@drawable/shape3"
            android:drawableLeft="@mipmap/ic_language_black_24dp"
            android:shadowColor="@color/TextViewShadow"
            android:shadowDx="20"
            android:shadowDy="20"
            android:shadowRadius="5"
            android:text="@string/Language"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.23"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnHowToPlay"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="20dp"
            android:layout_weight="0.5"
            android:background="@drawable/shape4"
            android:drawableLeft="@mipmap/ic_help_outline_black_24dp"
            android:shadowColor="@color/TextViewShadow"
            android:shadowDx="20"
            android:shadowDy="20"
            android:shadowRadius="5"
            android:text="@string/HowToPlay"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnAbout2048Ball"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="5dp"
            android:layout_weight="0.5"
            android:background="@drawable/shape4"
            android:drawableLeft="@mipmap/ic_receipt_black_24dp"
            android:shadowColor="@color/TextViewShadow"
            android:shadowDx="20"
            android:shadowDy="20"
            android:shadowRadius="5"
            android:text="@string/About2048Ball"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>