<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/standard_card_radius"
    app:cardElevation="@dimen/standard_card_elevation">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#00ffffff"
            android:text="Setting"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSounds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/SoundsBackgroundColorLanguage"
            android:drawableLeft="@mipmap/ic_volume_up_black_24dp"
            android:padding="8dp"
            android:shadowColor="@color/TextViewShadow"
            android:shadowDx="20"
            android:shadowDy="20"
            android:shadowRadius="5"
            android:text="@string/Sounds"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnBackgroundColor"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@color/SoundsBackgroundColorLanguage"
            android:drawableLeft="@mipmap/ic_palette_black_24dp"
            android:padding="8dp"
            android:shadowColor="@color/TextViewShadow"
            android:shadowDx="20"
            android:shadowDy="20"
            android:shadowRadius="5"
            android:text="@string/BackgroundColor"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnLanguage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@color/SoundsBackgroundColorLanguage"
            android:drawableLeft="@mipmap/ic_language_black_24dp"
            android:padding="8dp"
            android:shadowColor="@color/TextViewShadow"
            android:shadowDx="20"
            android:shadowDy="20"
            android:shadowRadius="5"
            android:text="@string/Language"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>

</android.support.v7.widget.CardView>
